<resources>
    <string name="app_name">功夫夺宝</string>
    <!--登录、注册相关-->
    <string name="login_hint_input_phone_number">请输入手机号</string>
    <string name="login_hint_input_verify_code">请输入验证码</string>
    <string name="login_hint_input_password">请输入密码</string>
    <string name="register_text_load_verify_code">获取验证码</string>
    <string name="register_tip_protocol_1">已阅读并同意</string>
    <string name="register_tip_protocol_2">《软件许可及服务协议》</string>
    <string name="register_btn_register">注册</string>
    <string name="login_btn_login">登录</string>
    <string name="login_tip_remember_pwd">记住密码</string>
    <string name="login_tip_forget_pwd">忘记密码？</string>
    <string name="register_tip_input_phone_number">请输入手机号</string>
    <string name="register_tip_input_verify_code">请输入验证码</string>
    <string name="register_tip_input_pwd">请输入密码</string>
    <string name="register_tip_format_wrong_phone_number">手机号格式有误</string>
    <string name="register_tip_format_wrong_verify_code">验证码格式有误</string>
    <string name="register_tip_format_wrong_pwd">密码格式有误，应为：6-13位，由字母、数字、下划线组成，字母区分大小写</string>
    <string name="register_tip_set_protocol_true">请勾选“已阅读并同意协议”</string>

    <!--MainBottomView-->
    <string name="widget_main_bottom_kfip">功夫夺宝</string>
    <string name="widget_main_bottom_lastest_open">最新揭晓</string>
    <string name="widget_main_bottom_meeting">武林大会</string>
    <string name="widget_main_bottom_bill">清单</string>
    <string name="widget_main_bottom_mine">我的</string>

    <!--我的-->
    <string name="mine_click_to_login">点击登录</string>
    <string name="mine_person_info">个人资料</string>
    <string name="mine_wealth_kf_coin">功夫币</string>
    <string name="mine_wealth_kf_coin_default">0</string>
    <string name="mine_wealth_recharge">充值</string>
    <string name="mine_ip_record">夺宝记录</string>
    <string name="mine_prize_record">中奖记录</string>
    <string name="mine_announce_bill">晒单记录</string>
    <string name="mine_my_address">我的收货地址</string>

    <!--个人资料-->
    <string name="person_info_avatar">头像</string>
    <string name="person_info_nickname">昵称</string>
    <string name="person_info_birthday">生日</string>
    <string name="person_info_sex">性别</string>
    <string name="person_info_modify_pwd">修改密码</string>

    <!--修改昵称-->
    <string name="modify_nickname_hint">昵称</string>
    <string name="modify_nickname_suggest">好的名字带给你好的运气~</string>
    
    <!--修改密码-->
    <string name="modify_pwd_tip_page">该页面用于修改密码</string>
    <string name="modify_pwd_hint_input_old_pwd">请输入旧密码</string>
    <string name="modify_pwd_hint_input_new_pwd">请输入6-20位登录密码</string>
    <string name="modify_pwd_hint_input_confirm_pwd">请再次输入密码</string>
    <string name="modify_pwd_btn_confirm_modify">确认修改</string>

    <!--选择性别的dialog-->
    <string name="dialog_select_sex_male">男</string>
    <string name="dialog_select_sex_female">女</string>

    <!--充值页面-->
    <string name="recharge_tip_page">充值金额用来购买功夫夺宝提供的电商优惠券（1元等于1张优惠券），
        同时获得相应个数的夺宝币，可以用于功夫夺宝，充值的款项将无法退回。</string>
    <string name="recharge_right_now">马上充值</string>
    <string name="recharge_tip_select_money">选择充值金额</string>
    <string name="recharge_tip_select_pay_way">选择支付方式</string>
</resources>
