<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/modify_pwd_bg_page"
    >
    <include layout="@layout/include_header_view"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/modify_pwd_tip_height"
        android:paddingLeft="@dimen/modify_pwd_paddingLeft"
        android:gravity="center_vertical"
        android:textSize="@dimen/standard_key_text_size"
        android:text="@string/modify_pwd_tip_page"
        />
    <EditText
        android:id="@+id/et_input_old_pwd"
        style="@style/ModifyPwdEditTextStyle"
        android:hint="@string/modify_pwd_hint_input_old_pwd"
         />
    <include layout="@layout/include_view_divider"/>
    <EditText
        android:id="@+id/et_input_new_pwd"
        style="@style/ModifyPwdEditTextStyle"
        android:hint="@string/modify_pwd_hint_input_new_pwd"
        />
    <include layout="@layout/include_view_divider"/>
    <EditText
        android:id="@+id/et_confirm_pwd"
        style="@style/ModifyPwdEditTextStyle"
        android:hint="@string/modify_pwd_hint_input_confirm_pwd"
        />
    <TextView
        android:id="@+id/tv_confirm_pwd"
        style="@style/ModifyPwdBtnStyle"
        android:text="@string/modify_pwd_btn_confirm_modify"
        android:layout_marginTop="@dimen/modify_pwd_marginTop"
        />
</LinearLayout>