<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/mine_wealth_height"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:id="@+id/ly_mine_wealth"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/selector_btn_white"
            >
            <TextView
                android:id="@+id/tv_mine_kf_coin"
                style="@style/WealthTextStyle"
                android:text="@string/mine_wealth_kf_coin_default"
                />
            <TextView
                style="@style/WealthTextStyle"
                android:text="@string/mine_wealth_kf_coin"
                android:layout_marginTop="@dimen/mine_wealth_kf_coin_margin"
                />
        </LinearLayout>
        <View
            android:layout_width="@dimen/standard_view_divider_height"
            android:layout_height="match_parent"
            android:background="@color/standard_bg_view_divider"
            />
        <TextView
            android:id="@+id/tv_mine_recharge"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/mine_wealth_recharge"
            android:textSize="@dimen/standard_minor_text_size"
            android:textColor="@color/mine_wealth_recharge"
            android:drawableTop="@mipmap/icon_wealth_recharge"
            android:paddingTop="@dimen/mine_wealth_recharge_paddingTop"
            android:paddingBottom="@dimen/mine_wealth_recharge_paddingBottom"
            android:background="@drawable/selector_btn_white"
            />
    </LinearLayout>
    <include layout="@layout/include_view_divider"/>
</LinearLayout>